feat: add normal routing and ansiblex management